--- a/prac.html
+++ b/prac.html
@@ -5,21 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+            .gg{
+                width: 10%;
+                height: 5%;
+            }
+            .ff{
+                background-color: yellow;
+            }
+    </style>
 </head>
 <body>
-    <div id="first" class="hello" >
-        <p>HY bitch its you grandpa</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum illo porro ut enim et libero esse provident dolor fugit voluptates cupiditate explicabo, vitae sapiente fuga? Rerum minima quae aspernatur distinctio.</p>
-        <p>hope it works</p>
-    </div>
+    <h1 id="fie" class="gg ff" >
+        Lorem ipsum dolor sit amet consectet praesentium sapiente quis iusto veniam similique dolorem?
+    </h1>
     <script>
-       let a = document.getElementById(`first`).lastElementChild
-       console.log(a)
-       let div = document.createElement(`div`)
-       div.innerHTML = "<h1>WOW IT WORKS RIGHT</h1>";
-       a.replaceWith(div);
+        setInterval(function hello (){
+            document.getElementById("fie").classList.toggle("ff")
+        },1000)
 
-        
     </script>
+    
 </body>
 </html>
