--- a/clock.Html
+++ b/clock.Html
@@ -22,12 +22,12 @@
                         Time of today is 
                     </h1>
                     <div class="text-center" >
-                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 " id="time" style="display: inline-block; "  >Hello</p>
-                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 " id="time" style="display: inline-block; "  >Hello</p>
-                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 " id="time" style="display: inline-block; "  >Hello</p>
-                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 " id="time" style="display: inline-block; "  >Hello</p>
-                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 " id="time" style="display: inline-block; "  >Hello</p>
-                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 " id="time" style="display: inline-block; "  >Hello</p>
+                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 me-1 " id="time" style="display: inline-block; "  >Hello</p>
+                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 me-1 " id="time" style="display: inline-block; "  >Hello</p>
+                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 me-1 " id="time" style="display: inline-block; "  >Hello</p>
+                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 me-1 " id="time" style="display: inline-block; "  >Hello</p>
+                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 me-1 " id="time" style="display: inline-block; "  >Hello</p>
+                    <p class="fs-1 box border border-black border-2 rounded-pill mt-5 me-1 " id="time" style="display: inline-block; "  >Hello</p>
                 </div>
                 
             </div>
