--- a/prac.html
+++ b/prac.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-            .gg{
-                width: 10%;
-                height: 5%;
-            }
-            .ff{
-                background-color: yellow;
-            }
-    </style>
+ 
 </head>
 <body>
     <script>
-       
+       let p = new Promise (function (reject , resolve){
+        setTimeout(()=>{
+            console.log("work")
+            resolve(56);
+;        },3000)
+       })
+       p.then((value)=>{
+        console.log(value)
+       })
     </script>
     
 </body>
