--- a/callBackFunctionAndPromises.html
+++ b/callBackFunctionAndPromises.html
@@ -11,7 +11,7 @@
         <h1 id="ss">here</h1>
     </div>
 
-    <script>
+    <!-- <script>
         function loadScript ( src ,callback ){
            let script = document.createElement(`script`)
             script.src = src
@@ -35,6 +35,34 @@
         }
         }
         loadScript("https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js",hello)
-    </script>
+   </script> -->
+
+<!-- USING A BETTER MTHOD WITH PROMISES -->
+
+<script>
+    let  loadScript= (src)=>{
+         return   new Promise((resolve , reject)=> {
+        let script = document.createElement("script")
+        script.src = src;
+        document.body.appendChild(script)
+        script.onload=()=> {
+            console.log("1st worked")
+            resolve(1);
+        }
+        script.onerror =()=>{reject(0)}
+    })
+    }
+    let p1 = loadScript("https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js")
+    p1.then((value)=>{
+        console.log(value)
+        return loadScript("https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js")
+    }).then((value)=>{
+        console.log(value, "2nd worked too")
+    })
+    .catch((error)=>{
+        console.log("not working")
+    })
+</script>
+
 </body>
 </html>
